<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WhatToDo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_decription" tools:ignore="ExtraTranslation">Description</string>
    <string name="label_date">Date</string>
    <string name="label_optional">Optional</string>
    <string name="label_notification">How often to sent notifications</string>
    <string name="label_save">Save</string>
    <string name="label_photo_button">Take Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
